...
                  Navigator.of(context).pushAndRemoveUntil(
                      OnboardingScreen.route(), (route) => false);
                },
              ),
              PopupMenuItem(
                  child: ListTile(
                    key: const ValueKey('downloadFromUrl'),
                    leading: const FaIcon(FontAwesomeIcons.fileCode),
                    title: Text(loc.loadFromRemoteUrl),
                  ),
                  value: () async {
                    final source = await showDialog<FileSourceUrl>(
                        context: context,
...
              Navigator.of(context).pop(
                  FileSourceUrl(_enteredUrl, uuid: AppDataBloc.createUuid()));
            } else {
              Navigator.of(context).pop();
            }
          },
          child: const Text('Ok'),
        )
      ],
    );
  }
}

...
