...
    List<PopupMenuItem<VoidCallback>> Function(BuildContext context) builder,
    List<PopupMenuItem<VoidCallback>> Function(BuildContext context)
        secondaryBuilder,
  }) {
    final openedFiles = Provider.of<OpenedKdbxFiles>(context);
    return PopupMenuButton<VoidCallback>(
      key: const ValueKey('appBarOverflowMenu'),
      onSelected: (val) => val(),
      itemBuilder: (context) => [
        ...?(builder == null ? null : builder(context)),
        ...AppBarMenu.createDefaultPopupMenuItems(
          context,
          openedFiles,
...
