...
  @override
  String errorUnlockFileBody(Object error) {
    return 'Unknown error while trying to open file. ${error}';
  }

  @override
  String get dialogContinue => 'Continue';

  @override
  String get dialogSendErrorReport => 'Send Error Report/Help';

  @override
  String get groupFilterDescription => 'Select which Groups to show (recursively)';
...
